# deprecations-rss

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_INTEGRATION.md  README.md  README_AZURE.md  base_scraper.py  cache_manager.py  change_detector.py  data.json  data.json.backup  data_cache.json  dev-swarm.yml  dev.yml  generate_social_card.py  json_feed_gen.py  llm_analyzer.py  main.py  models.py  openai_scraper.py  providers.py  pyproject.toml  rss_gen.py  run.py  swarm-worker.yml  test_basic.py  test_enhanced_scrapers.py
.github/: FUNDING.yml
.github-cache/deprecations/: cache-state.json
.github/workflows/: ci.yml  daily-update.yml  scrape.yml
config/: scrapers.yaml
docs/: CACHE_IMPLEMENTATION.md  CNAME  SOCIAL_CARD_README.md  index.html  social-card.html  styles.css
docs/rss/v1/: feed.xml
docs/v1/: deprecations.json  feed.json  feed.xml
scrapers/: __init__.py  anthropic_scraper.py  aws_bedrock_scraper.py  cohere_scraper.py  google_vertex_scraper.py  openai_scraper.py
src/: __init__.py  base_scraper.py  cache_manager.py  config.py  llm_analyzer.py  main.py  models.py  providers.py  run_orchestrator.py
src/cache/: __init__.py  cli.py  http_cache.py  manager.py  models.py
src/cache/storage/: __init__.py  base.py  filesystem.py  github_actions.py
src/errors/: __init__.py  analyzer.py  logger.py  recovery.py
src/models/: __init__.py  deprecation.py  feed.py  scraper.py
src/notifications/: __init__.py  github_issues.py  notifier.py
src/rss/: __init__.py  config.py  generator.py
src/scrapers/: README.md  __init__.py  anthropic.py  anthropic_scraper.py  aws_bedrock_scraper.py  azure_foundry_scraper.py  base.py  base_scraper.py  cache.py  cohere_scraper.py  data_manager.py  enhanced_base.py  example_scraper.py  google_scraper.py  google_vertex_models_scraper.py  google_vertex_scraper.py  mock_data.py  openai.py  openai_fallback_data.json  openai_scraper.py  orchestrator.py  registry.py  run_all.py  utils.py  xai_scraper.py
src/site/: __init__.py  generate_site.py  generator.py  styles.css
src/site/templates/: base.html  index.html
src/storage/: __init__.py  base.py  json_storage.py
tests/: __init__.py  test_aws_bedrock_scraper.py  test_azure_scraper.py  test_basic.py  test_config.py  test_errors_analyzer.py  test_errors_logger.py  test_errors_recovery.py  test_google_scraper.py  test_llm_analyzer.py  test_notifications_github_issues.py  test_notifications_notifier.py  test_xai_scraper.py
tests/fixtures/: aws_bedrock_lifecycle.html  azure_foundry_lifecycle.html  google_changelog.html  openai_deprecations.html  xai_models.html
tests/integration/: test_cache_integration.py  test_openai_scraper.py  test_rss_feed_regression.py  test_site_generation.py
tests/models/: test_deprecation.py
tests/rss/: test_config.py  test_generator.py
tests/scrapers/: test_base_scraper.py  test_utils.py
tests/unit/: test_anthropic_scraper.py  test_base_scraper.py  test_cache.py  test_cache_entry.py  test_data_manager.py  test_deprecation_models.py  test_generate_site.py  test_http_cache.py  test_mock_data.py  test_models.py  test_openai_scraper.py  test_orchestrator.py  test_orchestrator_data_manager.py  test_run_all.py  test_scraper_models.py  test_scraper_registry.py  test_site_generator.py  test_storage.py  test_version.py
tests/unit/cache/: test_cache_manager.py  test_storage_backends.py
