[project]
name = "deprecations-rss"
version = "0.1.0"
description = "Daily-updated RSS feed tracking AI model deprecations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "leblancfg"},
]

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]

