[project]
name = "deprecations-rss"
version = "0.1.0"
description = "Daily-updated RSS feed tracking AI model deprecations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "leblancfg"},
]

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "ruff>=0.8.0",
    "python-dotenv>=1.0.0",
    "ipython>=9.4.0",
    "anthropic>=0.64.0",
    "instructor>=1.10.0",
    "pytest>=8.0.0",
    "browser-use>=0.5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

